# fprime-microchip-DM320113-demo

./: .gitmodules  CMakeLists.txt  README.md  fprime-FreeRTOS.cmake  project.cmake  same70linker.cmake  settings.ini
ATSAME70Q21B_DFP/component/: usart.h
Components/: CMakeLists.txt
Components/FreeRTOSUartDriver/: CMakeLists.txt  FreeRTOSUartDriver.cpp  FreeRTOSUartDriver.fpp  FreeRTOSUartDriver.hpp
Components/FreeRTOSUartDriver/docs/: sdd.md
Components/SamE70UartDriver/: CMakeLists.txt  SamE70UartDriver.cpp  SamE70UartDriver.fpp  SamE70UartDriver.hpp
Components/SamE70UartDriver/docs/: sdd.md
Components/usart1Driver/: CMakeLists.txt  usart1Driver.cpp  usart1Driver.fpp  usart1Driver.hpp
Components/usart1Driver/docs/: sdd.md
Components/usart1Driver/usart1src/: interrupts.h  plib_usart_common.h
Components/usart1Driver/usart1src/sys/: CMakeLists.txt  alltypes.h
RefDemo/: CMakeLists.txt  Main.cpp  README.md
RefDemo/Top/: CMakeLists.txt  RefDemoPackets.xml  RefDemoTopology.cpp  RefDemoTopology.hpp  RefDemoTopologyDefs.hpp  instances.fpp  topology.fpp
config/: FpConfig.h
fprime-microchip-DM320113/: README.md  fprime-FreeRTOS.cmake
fprime-microchip-DM320113/Os/freeRTOS/: Task.cpp
fprime-microchip-DM320113/cmake/platform/: FreeRTOS.cmake
fprime/Fw/Types/: BasicTypes.hpp
fprime/Os/: CMakeLists.txt  TaskCommon.cpp  TaskIdRepr.hpp
fprime/Os/freeRTOS/: CMakeLists.txt
fprime/Svc/: CMakeLists.txt
fprime/cmake/platform/FreeRTOS/Source/: CMakeLists.txt
fprime/cmake/platform/FreeRTOS/Source/include/: FreeRTOSConfig.h
(+5 files in other folders)
